infra/kubernetes/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sentinel-system
  labels:
    app.kubernetes.io/part-of: sentinel-x
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    app.kubernetes.io/part-of: sentinel-x
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-shop
  labels:
    app.kubernetes.io/part-of: sentinel-x
---
apiVersion: v1
kind: Namespace
metadata:
  name: sentinel-chaos
  labels:
    app.kubernetes.io/part-of: sentinel-x
